--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Messages</h1>
 
-<ul>
+<%= link_to "New message", new_message_path, id: "new_message_link", :remote => true %>
+
+<ul id="message_list">
   <% @messages.each do |message| %>
     <li><%= link_to message.id, message_path(message) %></li>
   <% end %>
 </ul>
-
-<%= link_to "New message", new_message_path %>
