--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,4 @@
 $('#new_message_form').remove();
 $('#new_message_link').show();
-$('#message_list').append('<li><%= link_to @message.id, message_path(@message) %></li>')
+
+$('#message_list').append("<li><To: <%= @message.to %> | From: <%= @message.from %> | %= @message.body %></li>");
