--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,6 +4,6 @@
 
 <ul id="message_list">
   <% @messages.each do |message| %>
-    <li><%= link_to message.id, message_path(message) %></li>
+    <li><%= link_to message.id, message_path(message) %> | To: <%= message.to %> | From: <%= message.from %>| <%= message.body %></li>
   <% end %>
 </ul>
