--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,8 +12,8 @@
    {:class => "form-control"}
  %>
   <%= f.label :from %>
-  <%= f.text_field :from %>
+  <%= f.text_field :from, class: "form-control" %>
   <%= f.label :body %>
-  <%= f.text_field :body %>
-  <%= f.submit %>
+  <%= f.text_area :body, size: "24x20", class: "form-control" %>
+  <%= f.submit class: "btn btn-primary"%>
 <% end %>
