--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,9 +1,13 @@
-<h1>Messages</h1>
+<div class="hero-unit">
+  <h1>Twilio Messages!</h1>
+  <h2>An app that lets users send text messages to their friends.</h2>
+</div>
 
-<%= link_to "New message", new_message_path, id: "new_message_link", :remote => true %>
-
-<ul id="message_list">
-  <% @messages.each do |message| %>
-    <li><%= link_to message.id, message_path(message) %> | To: <%= message.to %> | From: <%= message.from %>| <%= message.body %></li>
-  <% end %>
-</ul>
+<div class="container">
+  <ul id="message_list">
+    <% @messages.each do |message| %>
+      <li><%= link_to message.id, message_path(message) %> | To: <%= message.to %> | From: <%= message.from %>| <%= message.body %></li>
+    <% end %>
+  </ul>
+  <%= link_to "New message", new_message_path, id: "new_message_link", class: "btn btn-primary btn-large", :remote => true %>
+</div>
