add footer with links to lesson and twilio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,10 @@
     <%= flash[:notice] %>
     <%= yield %>
   </body>
+  <div class="navebar navbar-default navbar-fixed-bottom">
+    <div class="container">
+      <p class="navbar-text pull-left">&copy; Maldon Meehan & James Turello, <a href="https://www.learnhowtoprogram.com/rails/apis/texting-apps-two-day-project"  target="_blank">Epicodus Lesson</a></p>
+      <a href="https://www.twilio.com/" class="navbar-btn btn-danger btn pull-right" target="_blank">Twilio</a>
+    </div>
+  </div>
 </html>
